src/typegraph/core-ng/src/runtimes/prisma/type_generation/snapshots/typegraph_core_ng__runtimes__prisma__type_generation__test__create_many User out.snap
---
source: src/typegraph/core-ng/src/runtimes/prisma/type_generation/mod.rs
expression: tp.print(out)
---
root: struct #89
└─ [count]: integer #88
