src/typegraph/core-ng/src/runtimes/prisma/type_generation/snapshots/typegraph_core_ng__runtimes__prisma__type_generation__test__find_first User out.snap
---
source: src/typegraph/core-ng/src/runtimes/prisma/type_generation/mod.rs
expression: tp.print(out)
---
root: optional 'optional_24' #24
└─ item: struct 'User_output' #23
   ├─ [id]: integer #11
   ├─ [name]: string #12
   └─ [posts]: list 'list_22' #22
      └─ item: struct 'Post_output_excluding_rel_Post_User' #21
         ├─ [id]: integer #17
         └─ [title]: string #18
