src/typegraph/core-ng/src/runtimes/prisma/type_generation/snapshots/typegraph_core_ng__runtimes__prisma__type_generation__test__find_many Record out.snap
---
source: src/typegraph/core-ng/src/runtimes/prisma/type_generation/mod.rs
expression: tp.print(out)
---
root: list 'list_73' #73
└─ item: struct 'Record_with_nested_count' #72
   ├─ [age]: optional 'optional_6' #6
   │  └─ item: integer #5
   ├─ [created_at]: string #0
   ├─ [id]: string #2
   └─ [name]: string #4
