src/typegraph/core-ng/src/runtimes/prisma/type_generation/snapshots/typegraph_core_ng__runtimes__prisma__type_generation__test__find_unique User out.snap
---
source: src/typegraph/core-ng/src/runtimes/prisma/type_generation/mod.rs
expression: tp.print(out)
---
root: optional 'optional_90' #90
└─ item: struct 'User_with_nested_count' #89
   ├─ [_count]: struct #88
   │  └─ [posts]: optional '_count' #87
   │     └─ item: integer #86
   ├─ [id]: integer #50
   ├─ [name]: string #52
   └─ [posts]: list 'list_85' #85
      └─ item: struct 'Post_with_nested_count_excluding_rel_Post_User' #84
         ├─ [id]: integer #56
         └─ [title]: string #58
